2005-08-02  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

=== PyGTK 2.7.2 ===
2005-07-30  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Updated
	
2005-08-02  Mark McLoughlin  <mark@skynet.ie>

	Fixes bug #312337

	* gobject/gobjectmodule.c: (_wrap_pyg_type_register):
	Make the "already registered" warning a deprecation warning
	with a more detailed hint on what it means.

2005-08-01  Manish Singh  <yosh@gimp.org>

	* gobject/pygobject-private.h
	* gobject/pygmaincontext.c: Add a convenience function 
	(pyg_main_context_new) to create a PyGMainContext from a
	GMainContext. Takes care of refing the supplied GMainContext
	as well.

	* gobject/gobjectmodule.c (pyg_main_context_default)
	* gobject/pygmainloop.c (_wrap_g_main_loop_get_context)
	* gobject/pygsource.c (pyg_source_get_context): use the new
	convenience function here. This fixes bug #312259.

2005-07-31  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pyg_object_new): Call
	pygobject_new_full instead of pygobject_new to disable sinking.
	Instead, call pygobject_sink after g_object_unref, so that the
	sink functions run with the expected reference count and do their
	work accordingly.
	
	* gobject/pygobject-private.h: New internal API pygobject_sink.

	* gobject/pygobject.c (pygobject_sink),
	(pygobject_register_wrapper, pygobject_new_full): sink_object
	renamed to pygobject_sink and made internal API.
	
	* tests/test_subtype.py: Add tests to check reference count of
	windows, with or without subclassing, from gobject.new or from
	constructor.

2005-07-30  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gdk.override (_wrap_gdk_event_free): Deprecate
	gtk.gdk.Event.free and make it do nothing.

	* gobject/gobjectmodule.c (_wrap_pyg_type_register): Fix test to
	see if the class has already been registered.  Don't issue a
	DeprecationWarning; instead, just issue a Warning when trying to
	register a class that is already registered.
