@@ -1,4 +1,3 @@
-# require automake-1.7
 AUTOMAKE_OPTIONS = 1.7
 
 if BUILD_GTK
@@ -9,109 +8,8 @@ SUBDIRS = codegen gobject . $(GTK_SUBDIR) docs examples tests
 
 PLATFORM_VERSION = 2.0
 
-CLEANFILES =
-EXTRA_DIST = $(defs_DATA)
-pyexec_LTLIBRARIES =
-
-defsdir = $(pkgdatadir)/$(PLATFORM_VERSION)/defs
-defs_DATA =
-
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = \
-	pygobject-$(PLATFORM_VERSION).pc
-
-if BUILD_GTK
-pkgconfig_DATA += pygtk-$(PLATFORM_VERSION).pc
-endif
-
-INCLUDES = 			\
-	$(PYTHON_INCLUDES) 	\
-	$(GLIB_CFLAGS) 		\
-	$(PANGO_CFLAGS) 	\
-	$(ATK_CFLAGS) 		\
-	-I$(top_srcdir)/gobject
-
-pkgpythondir = $(pyexecdir)/gtk-2.0
-pkgpyexecdir = $(pyexecdir)/gtk-2.0
-pkgpyexec_LTLIBRARIES =
-
-# this file is common to all pygtk versions.
-pyexec_PYTHON = pygtk.py
-
-# install pth file.
-install-data-local:
-	$(mkinstalldirs) $(DESTDIR)$(pythondir)
-	echo "gtk-$(PLATFORM_VERSION)" > $(DESTDIR)$(pyexecdir)/pygtk.pth
-install-exec-local:
-	$(mkinstalldirs) $(DESTDIR)$(pyexecdir)
-	echo "gtk-$(PLATFORM_VERSION)" > $(DESTDIR)$(pyexecdir)/pygtk.pth
-uninstall-local:
-	rm -f $(DESTDIR)$(pythondir)/pygtk.pth $(DESTDIR)$(pyexecdir)/pygtk.pth
-
-
-pkgpython_PYTHON = dsextras.py
-
-if BUILD_ATK
-pkgpyexec_LTLIBRARIES += atk.la
-defs_DATA += atk.defs atk-types.defs
-endif
-if BUILD_PANGO
-pkgpyexec_LTLIBRARIES += pango.la
-defs_DATA += pango.defs pango-types.defs
-endif
-if BUILD_PANGOCAIRO
-pkgpyexec_LTLIBRARIES += pangocairo.la
-defs_DATA += pangocairo.defs
-endif
-
-common_ldflags = -module -avoid-version
-if PLATFORM_WIN32
-common_ldflags += -no-undefined
-endif
-
-# atk module
-atk_la_LDFLAGS = $(common_ldflags) -export-symbols-regex initatk
-atk_la_LIBADD = $(ATK_LIBS)
-atk_la_SOURCES = atkmodule.c
-nodist_atk_la_SOURCES = atk.c
-atk.c: atk.defs atk-types.defs atk.override
-CLEANFILES += atk.c
-EXTRA_DIST += atk.override
-
-# pango module
-pango_la_LDFLAGS = $(common_ldflags) -export-symbols-regex initpango
-pango_la_LIBADD = $(PANGO_LIBS)
-pango_la_SOURCES = pangomodule.c
-nodist_pango_la_SOURCES = pango.c
-pango.c: pango.defs pango-types.defs pango.override
-CLEANFILES += pango.c
-EXTRA_DIST += pango.override
-
-# pangocairo module
-pangocairo_la_LDFLAGS = $(common_ldflags) -export-symbols-regex initpangocairo
-pangocairo_la_LIBADD = $(PANGOCAIRO_LIBS)
-pangocairo_la_CFLAGS = $(PANGOCAIRO_CFLAGS)
-pangocairo_la_SOURCES = pangocairomodule.c
-nodist_pangocairo_la_SOURCES = pangocairo.c
-pangocairo.c: pangocairo.defs pangocairo.override
-CLEANFILES += pangocairo.c
-EXTRA_DIST += pangocairo.override
-
-.defs.c:
-	(cd $(srcdir)\
-	 && $(PYTHON) codegen/codegen.py \
-	    --register pango-types.defs \
-	    --register atk-types.defs \
-	    --register gtk/gdk-types.defs \
-	    --register gtk/gtk-types.defs \
-	    --override $*.override \
-	    --prefix py$* $*.defs) > gen-$*.c \
-	&& cp gen-$*.c $*.c \
-	&& rm -f gen-$*.c
-
-noinst_PYTHON = ltihooks.py
-
-EXTRA_DIST += 				\
+CLEANFILES = 
+EXTRA_DIST = 				\
 	ChangeLog.pre-2-0		\
 	ChangeLog.pre-2-6		\
 	config.h.win32 			\
@@ -127,6 +25,103 @@ EXTRA_DIST += 				\
 	PKG-INFO.in 			\
 	setup.py 			\
 	THREADS
+INCLUDES = $(PYTHON_INCLUDES) $(GLIB_CFLAGS) -I$(top_srcdir)/gobject
+
+# pkg-config files
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = pygobject-$(PLATFORM_VERSION).pc
+if BUILD_GTK
+pkgconfig_DATA += pygtk-$(PLATFORM_VERSION).pc
+endif
+
+# defs files
+defsdir = $(pkgdatadir)/$(PLATFORM_VERSION)/defs
+defs_DATA =
+
+# python
+pyexec_PYTHON = pygtk.py
+pyexec_LTLIBRARIES =
+noinst_PYTHON = ltihooks.py
+
+# pygtk scripts
+pkgpythondir = $(pyexecdir)/gtk-2.0
+pkgpython_PYTHON = dsextras.py
+
+# pygtk extension modules
+pkgpyexecdir = $(pyexecdir)/gtk-2.0
+pkgpyexec_LTLIBRARIES =
+
+# linker flags
+common_ldflags = -module -avoid-version
+if PLATFORM_WIN32
+common_ldflags += -no-undefined
+endif
+
+# atk module
+ATK_DEFS = atk.defs atk-types.defs
+CLEANFILES += atk.c
+EXTRA_DIST += $(ATK_DEFS) atk.override
+atk.c: $(ATK_DEFS) atk.override
+atk_la_CFLAGS = $(ATK_CFLAGS)
+atk_la_LIBADD = $(ATK_LIBS)
+atk_la_LDFLAGS = $(common_ldflags) -export-symbols-regex initatk
+atk_la_SOURCES = atkmodule.c
+nodist_atk_la_SOURCES = atk.c
+if BUILD_ATK
+pkgpyexec_LTLIBRARIES += atk.la
+defs_DATA += $(ATK_DEFS)
+endif
+
+# pango module
+PANGO_DEFS = pango.defs pango-types.defs
+CLEANFILES += pango.c
+EXTRA_DIST += $(PANGO_DEFS) pango.override
+pango.c: $(PANGO_DEFS) pango.override
+pango_la_CFLAGS = $(PANGO_CFLAGS)
+pango_la_LIBADD = $(PANGO_LIBS)
+pango_la_LDFLAGS = $(common_ldflags) -export-symbols-regex initpango
+pango_la_SOURCES = pangomodule.c
+nodist_pango_la_SOURCES = pango.c
+if BUILD_PANGO
+pkgpyexec_LTLIBRARIES += pango.la
+defs_DATA += $(PANGO_DEFS)
+endif
+
+# pangocairo module
+PANGOCAIRO_DEFS = pangocairo.defs pangocairo.override
+CLEANFILES += pangocairo.c
+EXTRA_DIST += $(PANGOCAIRO_DEFS) pangocairo.override
+pangocairo.c: $(PANGOCAIRO_DEFS) pangocairo.override
+pangocairo_la_CFLAGS = $(PANGOCAIRO_CFLAGS)
+pangocairo_la_LDFLAGS = $(common_ldflags) -export-symbols-regex initpangocairo
+pangocairo_la_LIBADD = $(PANGOCAIRO_LIBS)
+pangocairo_la_SOURCES = pangocairomodule.c
+nodist_pangocairo_la_SOURCES = pangocairo.c
+if BUILD_PANGOCAIRO
+pkgpyexec_LTLIBRARIES += pangocairo.la
+defs_DATA += $(PANGOCAIRO_DEFS)
+endif
+
+# code generator
+.defs.c:
+	(cd $(srcdir)\
+	 && $(PYTHON) codegen/codegen.py \
+	    --register pango-types.defs \
+	    --register atk-types.defs \
+	    --override $*.override \
+	    --prefix py$* $*.defs) > gen-$*.c \
+	&& cp gen-$*.c $*.c \
+	&& rm -f gen-$*.c
+
+# install pth file.
+install-data-local:
+	$(mkinstalldirs) $(DESTDIR)$(pythondir)
+	echo "gtk-$(PLATFORM_VERSION)" > $(DESTDIR)$(pyexecdir)/pygtk.pth
+install-exec-local:
+	$(mkinstalldirs) $(DESTDIR)$(pyexecdir)
+	echo "gtk-$(PLATFORM_VERSION)" > $(DESTDIR)$(pyexecdir)/pygtk.pth
+uninstall-local:
+	rm -f $(DESTDIR)$(pythondir)/pygtk.pth $(DESTDIR)$(pyexecdir)/pygtk.pth
 
 snap:
 	$(MAKE) dist distdir=$(PACKAGE)-SNAP-`date +"%Y%m%d"`
