@@ -1,5 +1,12 @@
 2005-08-02  Johan Dahlin  <jdahlin@async.com.br>
 
+	* gtk/Makefile.am
+	* Makefile.am: Big makefile cleanup. Fix a couple of bugs
+	meanwhile, most noticable, always install include *.defs in
+	EXTRA_DIST and only install them when their target is built.
+	
+2005-08-02  Johan Dahlin  <jdahlin@async.com.br>
+
 	* configure.in: Post release version bump
 
 === PyGTK 2.7.2 ===
